--- a/src/FoodZone/FoodZone.Web/Views/Dashboard/Login.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Dashboard/Login.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Đăng Nhập</title>
-    <link rel="stylesheet" href="~/Assets/css/login-admin.css" />
+    <link rel="stylesheet" href="~/Assets/css/login-admin.css" runat="server"/>
 </head>
 <body>
     <div class="wrapper">
