--- a/src/FoodZone/FoodZone.Web/Views/Shared/_Layout.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Shared/_Layout.cshtml
@@ -192,8 +192,10 @@
         </aside>
     </header>
 
+    <main>
 
     @RenderBody()
+    </main>
 
     <a class="scroll-to-top" href="#">
         <i class="lnr lnr-arrow-up"></i>
@@ -201,8 +203,6 @@
 
     @Html.Partial("_Footer")
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
     <!-- Modernizer JS -->
     <script src="~/Assets/js/vendor/modernizr-3.7.1.min.js"></script>
     <!-- jQuery J~/A -->
