--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/CategoryAdmin/Create.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/CategoryAdmin/Create.cshtml
@@ -18,9 +18,8 @@
         @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
     </div>
 
-    <div class="form-group col-md-6">
-        @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control", @placeholder = "Tên danh mục" } })
-        @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
+    <div class="form-group col-md-6 mt-3">
+        <input type="file" class="form-control" name="uploadImage" />
     </div>
 
     <div class="form-group col-md-6">
