--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/CategoryAdmin/Edit.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/CategoryAdmin/Edit.cshtml
@@ -17,9 +17,10 @@
         @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
     </div>
 
-    <div class="form-group col-md-6">
-        @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control", @placeholder = "Tên danh mục" } })
-        @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
+    <div class="form-group col-md-6 mt-3">
+        @Html.HiddenFor(model => model.Image)
+        <img src="~/assets/images/@Model.Image" class="img-home" alt="">
+        <input type="file" class="form-control" name="uploadImage" />
     </div>
 
     <div class="form-group col-md-6">
