--- a/src/FoodZone/FoodZone.Web/Areas/Admin/Views/VoucherAdmin/Create.cshtml
+++ b/src/FoodZone/FoodZone.Web/Areas/Admin/Views/VoucherAdmin/Create.cshtml
@@ -81,7 +81,7 @@
     <script>
         $(document).ready(function () {
             $("#ExpiredDate").datepicker({
-                dateFormat: 'mm/dd/yy', changeMonth: true,
+                changeMonth: true,
                 changeYear: true, yearRange: "2022:2032", currentText: "Now"
             });
         });</script>
