--- a/src/FoodZone/FoodZone.Web/Views/Home/_CustomerFeedback.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Home/_CustomerFeedback.cshtml
@@ -5,7 +5,7 @@
                 <!--Section Title Start-->
                 <div class="section-title text-center mb-30">
                     <span class="section-title-1">Phản hồi khách hàng</span>
-                    <h3 class="section-title-3">TAIWANESE HOTPOT</h3>
+                    <h3 class="section-title-3">FOODZONE HOTPOT</h3>
                 </div>
                 <!--Section Title End-->
                 <div class="testimonial-carousel swiper-container intro11-carousel-wrap arrow-style-2">
