--- a/src/FoodZone/FoodZone.Web/Views/Shared/_ListTable.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Shared/_ListTable.cshtml
@@ -18,11 +18,30 @@
     }
 
     var listFloorNoDup = listFloor.Distinct().OrderBy(x => x).ToList();
+    
 }
-<div class="col">
+<div class="col" id="col-signal">
     <div class="booking-box">
         <div class="comment-box">
             <h5 class="text-uppercase">Chọn bàn</h5>
+            <div class="col-12 col-custom">
+                <div class="input-item mb-4 display-flex-col">
+                    <div class="display-flex-row">
+                        <div class="title-quantity">Số lượng bàn</div>
+                        <input id="capa" name="Capacity" type="text" onkeyup="handleChange()" 
+                               class="border-0 rounded-0 input-area number gray-bg input-quantity" 
+                               oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1').replace(/^0[^.]/, '0');" placeholder="Số lượng bàn" />
+                        
+                        <p style="danger">@ViewBag.TableNeed</p>
+                        <div style="width: 50px; height: 50px; border: 1px solid black; text-align: center ;font-size:20px ;margin-right: 10px; display:flex">
+                            +
+                        </div>
+                        <div style="width: 50px; height: 50px; border: 1px solid black; text-align: center; font-size: 20px ">
+                            -
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="tab-content mb-text display-flex-col" id="myTabContent">
                 <ul class="nav nav-tabs nav-menu-custom nav-tabs-floor-booking" id="myTab" role="tablist">
                     @for (int i = 0; i < listFloorNoDup.Count(); i++)
@@ -48,7 +67,7 @@
                         <div class="tab-pane fade show active display-flex-col" id="@(floorId + listFloorNoDup[i])" role="tabpanel" aria-labelledby="@(floorTab + listFloorNoDup[i])">
                             <div class="contructor-floor">
                                 <div class="object recepter-style">
-                                    Cửa ra vào | Lễ tân
+                                    Cửa ra vào | Lễ tân | Thang máy | Cầu thang
                                 </div>
 
                                 <div class="object window-style-left window-1">
@@ -66,8 +85,8 @@
                                 <div class="object window-style-left window-5">
                                     |
                                 </div>
-                                
-                                @Html.Action("GetTablesByCapacity", "Table", new {floor = listFloorNoDup[i] })
+
+                                @Html.Action("GetTablesByCapacity", "Table", new { floor = listFloorNoDup[i] })
                             </div>
                         </div>
                     }
@@ -75,7 +94,9 @@
                     {
                         <div class="tab-pane fade display-flex-col" id="@(floorId + listFloorNoDup[i])" role="tabpanel" aria-labelledby="@(floorTab + listFloorNoDup[i])">
                             <div class="contructor-floor">
-
+                                <div class="object recepter-style">
+                                    Thang máy | Cầu thang
+                                </div>
                                 <div class="object window-style-left window-1">
                                     |
                                 </div>
